--- a/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
@@ -28,7 +28,7 @@
                             <a href="/TermCodes/Correction" class="navbar-item">
                                 Term Codes
                             </a>
-                            <a href="" class="navbar-item">
+                            <a href="/API/Error" class="navbar-item">
                                 Api Errors
                             </a>
                             @*                            
