--- a/KeysReporting.WebAssembly.App/Client/Pages/CPH/Report.razor
+++ b/KeysReporting.WebAssembly.App/Client/Pages/CPH/Report.razor
@@ -124,7 +124,7 @@
     }
 
     <div class="columns is-centered">
-        <div class="column is-3">
+        <div class="column @(_firstLoad ? "is-4" : "is-3")">
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <div class="tile is-child box">
@@ -149,161 +149,170 @@
                 </div>
             </div>
         </div>
-        <div class="column is-6">
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <div class="tile is-child box" style="height:60vh; overflow:auto;">
-                        <div class="columns">
-                            <div class="column">
-                                <p class="title">Calls Per Hour: @_reportResponse?.Project?.ProjectCode1</p>
-                            </div>
-                            @if (_reportResponse != null)
-                            {
+        @if (!_firstLoad)
+        {
+            <div class="column is-6">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <div class="tile is-child box" style="height:60vh; overflow:auto;">
+                            <div class="columns">
                                 <div class="column">
-                                    <div class="buttons is-pulled-right">
-                                        <div class="button is-warning" @onclick=@(() => JumpToNow())>Jump to Now</div>
-                                        <div class="button is-danger" @onclick=@(() => ToggleReset())>Reset</div>
-                                    </div>
+                                    <p class="title">Calls Per Hour: @_reportResponse?.Project?.ProjectCode1</p>
                                 </div>
+                                @if (_reportResponse != null)
+                                {
+                                    <div class="column">
+                                        <div class="buttons is-pulled-right">
+                                            <div class="button is-warning" @onclick=@(() => JumpToNow())>Jump to Now</div>
+                                            <div class="button is-danger" @onclick=@(() => ToggleReset())>Reset</div>
+                                        </div>
+                                    </div>
+                                }
+                            </div>
+                            @if (_reportResponse == null)
+                            {
+                                <hr />
+                                <p class="subtitle">@Messages.NoCampaignSelect</p>
                             }
-                        </div>
-                        @if (_reportResponse == null)
-                        {
-                            <hr />
-                            <p class="subtitle">@Messages.NoCampaignSelect</p>
-                        }
-                        else
-                        {
-                            <EditForm Model="_editCPH" OnValidSubmit="HandleEditCPH">
-                                <DataAnnotationsValidator />
-                                <ValidationSummary />
-                                <label class="heading">CPH</label>
-                                <div class="field has-addons is-rounded">
-                                    <div class="control">
-                                        <InputNumber class="input is-danger" style="width:75px" @bind-Value="_editCPH.CPH" required="required" />
-                                        <ValidationMessage For="@(() => _editCPH.CPH)" />
+                            else
+                            {
+                                <EditForm Model="_editCPH" OnValidSubmit="HandleEditCPH">
+                                    <DataAnnotationsValidator />
+                                    <ValidationSummary />
+                                    <label class="heading">CPH</label>
+                                    <div class="field has-addons is-rounded">
+                                        <div class="control">
+                                            <InputNumber class="input is-danger" style="width:75px" @bind-Value="_editCPH.CPH" required="required" />
+                                            <ValidationMessage For="@(() => _editCPH.CPH)" />
+                                        </div>
+                                        <div class="control">
+                                            <button class="button is-success @_buttonClass"><span class="material-icons" style="font-size:36px">save</span></button>
+                                        </div>
                                     </div>
-                                    <div class="control">
-                                        <button class="button is-success @_buttonClass"><span class="material-icons" style="font-size:36px">save</span></button>
-                                    </div>
-                                </div>
-                            </EditForm>
+                                </EditForm>
 
 
-                            <table class="table is-striped is-fullwidth">
-                                <thead>
-                                    <tr>
-                                        <td></td>
-                                        <td>Time</td>
-                                        <td>Agent</td>
-                                        <td>Contact</td>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    @foreach (var line in _reportResponse.CPHLines)
-                                    {
-                                        var selected = false;
-
-                                        if ((line.Series.Hour == (DateTime.Now.Hour + 1)) && (line.Series.Minute - DateTime.Now.Minute > -5 && line.Series.Minute - DateTime.Now.Minute <= 0))
+                                <table class="table is-striped is-fullwidth">
+                                    <thead>
+                                        <tr>
+                                            <td></td>
+                                            <td>Time</td>
+                                            <td>Agent</td>
+                                            <td>Contact</td>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @foreach (var line in _reportResponse.CPHLines)
                                         {
-                                            selected = true;
-                                            ContactLine = line.Contact;
-                                        }
+                                            var selected = false;
 
-                                        <tr id="@(selected? "currentRow" :string.Empty)"
-                                            class="@((line.Series.Hour == 12 && line.Series.Minute == 30) || (line.Series.Hour == 21 && line.Series.Minute == 0)
+                                            if ((line.Series.Hour == (DateTime.Now.Hour)) && (line.Series.Minute - DateTime.Now.Minute > -5 && line.Series.Minute - DateTime.Now.Minute <= 0))
+                                            {
+                                                selected = true;
+                                                ContactLine = line.Contact;
+                                            }
+
+                                            <tr id="@(selected? "currentRow" :string.Empty)"
+                                                class="@((line.Series.Hour == 12 && line.Series.Minute == 30) || (line.Series.Hour == 21 && line.Series.Minute == 0)
                                                                     ? CSSClasses.SelectLine
                                                                     : selected
                                                                         ? CSSClasses.WarnLine
                                                                         : string.Empty)">
-                                            <td><a @onclick=@(() => ToggleEditTime(@line.Id))><span class="material-icons">edit</span></a></td>
-                                            <td>@line.Series.ToString("HH:mm")</td>
-                                            <td>@line.Agent</td>
-                                            <td>@line.Contact</td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
-                        }
+                                                <td><a @onclick=@(() => ToggleEditTime(@line.Id))><span class="material-icons">edit</span></a></td>
+                                                <td>@line.Series.ToString("HH:mm")</td>
+                                                <td>@line.Agent</td>
+                                                <td>@line.Contact</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="column is-3">
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <div class="tile is-child box">
-                        <p class="title">Campaign</p>
-                        @if (_reportResponse != null)
-                        {
-                            <div class="level">
-                                <div class="level-item has-text-centered">
-                                    <div>
-                                        <p class="heading">Total Contacts</p>
-                                        <p class="subtitle">@_reportResponse.TotalHours</p>
+            <div class="column is-3">
+                <div class="tile is-ancestor">
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            <p class="title">Campaign</p>
+                            @if (_reportResponse != null)
+                            {
+                                <div class="level">
+                                    <div class="level-item has-text-centered">
+                                        <div>
+                                            <p class="heading">Total Contacts</p>
+                                            <p class="subtitle">@_reportResponse.TotalHours</p>
+                                        </div>
+                                    </div>
+                                    <div class="level-item has-text-centered">
+                                        <div>
+                                            <p class="heading">Total Hours</p>
+                                            <p class="subtitle">
+                                                @(
+                                                    Math.Round(((double)@_reportResponse.TotalHours / (double)_reportResponse.CPH) / 0.25) * 0.25
+                                                    )
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="level-item has-text-centered">
-                                    <div>
-                                        <p class="heading">Total Hours</p>
-                                        <p class="subtitle">@(Math.Round(((double)@_reportResponse.TotalHours / (double)_reportResponse.CPH) / 0.25) * 0.25)</p>
+                                <div class="level">
+                                    <div class="level-item has-text-centered">
+                                        <div>
+                                            <p class="heading">Current Contacts</p>
+                                            <p class="subtitle">@_reportResponse.Completes</p>
+                                        </div>
+                                    </div>
+                                    <div class="level-item has-text-centered">
+                                        <div>
+                                            <p class="heading">Current CPH</p>
+                                            <p class="subtitle">
+                                                @(
+                                                    _reportResponse.Completes.HasValue && _reportResponse.CPH.HasValue && ContactLine > 0
+                                                    ? Math.Round((((double)@_reportResponse.Completes.Value / ContactLine) * (double)_reportResponse.CPH.Value) / 0.25) * 0.25
+                                                    : 0
+                                                    )
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="level">
-                                <div class="level-item has-text-centered">
-                                    <div>
-                                        <p class="heading">Current Contacts</p>
-                                        <p class="subtitle">@_reportResponse.Completes</p>
-                                    </div>
-                                </div>
-                                <div class="level-item has-text-centered">
-                                    <div>
-                                        <p class="heading">Current CPH</p>
-                                        <p class="subtitle">
-                                            @(_reportResponse.Completes.HasValue && _reportResponse.CPH.HasValue && ContactLine > 0
-                                                ? Math.Round((((double)@_reportResponse.Completes.Value / ContactLine) * (double)_reportResponse.CPH.Value) / 0.25) * 0.25
-                                                : 0)
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        }
+                            }
 
-                        @if (_projectList.Any())
-                        {
-                            <div class="field">
-                                <div class="control">
-                                    <label class="heading">Campaign</label>
-                                    <div class="select is-fullwidth">
-                                        <select class="form-select" @onchange="HandleProjectChange">
-                                            <option value="">-- Select Campaign --</option>
-                                            @foreach (var project in _projectList)
-                                            {
-                                                if (_search.ProjectID.HasValue && _search.ProjectID.Value == project.Id)
+                            @if (_projectList.Any())
+                            {
+                                <div class="field">
+                                    <div class="control">
+                                        <label class="heading">Campaign</label>
+                                        <div class="select is-fullwidth">
+                                            <select class="form-select" @onchange="HandleProjectChange">
+                                                <option value="">-- Select Campaign --</option>
+                                                @foreach (var project in _projectList)
                                                 {
-                                                    <option value="@project.Id" selected="selected">@project.ProjectCode1</option>
+                                                    if (_search.ProjectID.HasValue && _search.ProjectID.Value == project.Id)
+                                                    {
+                                                        <option value="@project.Id" selected="selected">@project.ProjectCode1</option>
+                                                    }
+                                                    else
+                                                    {
+                                                        <option value="@project.Id">@project.ProjectCode1</option>
+                                                    }
                                                 }
-                                                else
-                                                {
-                                                    <option value="@project.Id">@project.ProjectCode1</option>
-                                                }
-                                            }
-                                        </select>
+                                            </select>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        }
-                        else
-                        {
-                            <p class="subtitle">@Messages.NoCampaign</p>
-                        }
-                        <hr />
-                        <div class="button is-success" style="@(_firstLoad ? CSSClasses.DisplayNone : string.Empty)" @onclick=@(() => ToggleAddroject())>Add</div>
-                        <div class="button is-danger" style="@(_search.ProjectID.HasValue ? string.Empty : CSSClasses.DisplayNone)" @onclick=@(() => ToggleRemoveProject())>Remove</div>
+                            }
+                            else
+                            {
+                                <p class="subtitle">@Messages.NoCampaign</p>
+                            }
+                            <hr />
+                            <div class="button is-success @_buttonClass" style="@(_firstLoad ? CSSClasses.DisplayNone : string.Empty)" @onclick=@(() => ToggleAddroject())>Add</div>
+                            <div class="button is-danger @_buttonClass" style="@(_search.ProjectID.HasValue ? string.Empty : CSSClasses.DisplayNone)" @onclick=@(() => ToggleRemoveProject())>Remove</div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 </section>
