--- a/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
+++ b/KeysReporting.WebAssembly.App/Client/Shared/NavMenu.razor
@@ -37,7 +37,11 @@
                             </a>*@
                         </div>
                     </div>
+                    <a class="navbar-item" href="/Quote/Calculator">
+                        Quote Calculator
+                    </a>
                 </div>
+                
                 <div class="navbar-end">
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-link">
